--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $blockquote     :   #dfe9f4;
 $blockquotetext :   #3e658e;
 
 $lightgrey      :   #f2f2f2;
-$darkgrey       :   #a9a9a9;
+$darkgrey       :   #686868;
 
 
 @mixin border-radius($radius: 3px) {
